2005-10-11  Geoffrey Garen  <ggaren@apple.com>

        Added regexp_object.lut.h build phase from JavaScriptCore
        to JavaScriptCore+SVG.

        Reviewed by mitz.

        * JavaScriptCore.xcodeproj/project.pbxproj:

2005-10-11  Geoffrey Garen  <ggaren@apple.com>

        Fixed build bustage from last checkin (stray characters
        in the project file).

        Reviewed by mitz.

        * JavaScriptCore.xcodeproj/project.pbxproj:

2005-10-11  Geoffrey Garen  <ggaren@apple.com>

        New JavaScriptCore test results to reflect the last change.

        * tests/mozilla/expected.html:

2005-10-10  Geoffrey Garen  <ggaren@apple.com>

        - Implemented caching of match state inside the global RegExp object
          (lastParen, leftContext, rightContext, lastMatch, input).

          exec(), test(), match(), search(), and replace() now dipatch regular
          expression matching through the RegExp object's performMatch function, 
          to facilitate caching. This replaces registerRegexp and 
          setSubPatterns.
        
        - Implemented the special '$' aliases (e.g. RegExp.input aliases to 
          RegExp.$_).

        - Moved support for backreferences into the new static hash table
          used for other special RegExp properties. Truncated backreferences
          at $9 to match IE, FF, and the "What's New in Netscape 1.2?" doc.
          (String.replace still supports double-digit backreferences.)

        - Tweaked RegExp.prototype.exec to handle ginormous values in lastIndex.

        Fixes 11 -- count em, 11 -- JavaScriptCore tests.

        * fast/js/regexp-caching-expected.txt: Added.
        * fast/js/regexp-caching.html: Added.

        Reviewed by mjs.

        * JavaScriptCore.xcodeproj/project.pbxproj: Added regexp_object.lut.h
        * kjs/create_hash_table: Tweaked to allow for more exotic characters.
                                 We now rely on the compiler to catch illegal